(executables
 (names test_markdown)
 (modules test_markdown)
 (libraries alcotest mldoc))

(executables
 (names test_org)
 (modules test_org)
 (libraries alcotest mldoc))

(executables
 (names gen_md_files)
 (modules gen_md_files)
 (libraries qcheck mldoc))

(rule
 (alias runtest)
 (deps
  (:md test_markdown.exe)
  (:org test_org.exe))
 (action
  (progn
   (run %{md})
   (run %{org}))))
