(executables
 (names test_markdown)
 (modules test_markdown)
 (libraries alcotest mldoc))

(executables
 (names test_outline_markdown)
 (modules test_outline_markdown)
 (libraries alcotest mldoc))

(executables
 (names test_org)
 (modules test_org)
 (libraries alcotest mldoc))

(executables
 (names gen_md_files)
 (modules gen_md_files)
 (libraries qcheck mldoc))

(executables
 (names test_zip)
 (modules test_zip)
 (libraries alcotest qcheck qcheck-alcotest mldoc))

(executables
 (names test_export_markdown)
 (modules test_export_markdown)
 (libraries alcotest mldoc))

(executables
 (names test_export_opml)
 (modules test_export_opml)
 (libraries alcotest mldoc))

(rule
 (alias runtest)
 (deps
  (:md test_markdown.exe)
  (:md-outline test_outline_markdown.exe)
  (:org test_org.exe)
  (:zip test_zip.exe)
  (:export-md test_export_markdown.exe)
  (:export-opml test_export_opml.exe))
 (action
  (progn
   (run %{md})
   (run %{md-outline})
   (run %{org})
   (run %{zip})
   (run %{export-md})
   (run %{export-opml}))))
